--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,16 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # B) Docker Compose'u ayağa kaldır (Tipkı senin PC'de yaptığın gibi)
+      # B) Docker Compose'u ayağa kaldır
+      # BURASI EKLENDİ: GitHub'daki sırları Docker'a aktarıyoruz
       - name: Start Containers
+        env:
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          API_GATEWAY_PORT: ${{ secrets.API_GATEWAY_PORT }}
+          CORE_BANKING_PORT: ${{ secrets.CORE_BANKING_PORT }}
         run: docker-compose up -d --build
 
       # C) Bankanın açılmasını bekle (Veritabanı kurulsun, seed yapılsın)
